chore: tidy up swagger, some fixes on conflicting routes
