# backend/src/routes/event_management_route.ts
@@ -8,13 +8,13 @@ const router = Router();
 router.get('/events', EventManagementController.getAllEvents);
 
 // org routes
-router.get('/org/events/:userID', EventManagementController.getOrgEvents);
+router.get('/org/:userID/events', EventManagementController.getOrgEvents);
 router.post('/org/events', authMiddleware, EventManagementController.createEvent);
 router.get('/org/events/:id', EventManagementController.getEventById);
 router.get('/org/events/:id/partners', EventManagementController.getEventPartners);
 router.put('/org/events/:id', authMiddleware, EventManagementController.updateEvent);
 
 // corp routes
-router.get('/corp/events/:userID', EventManagementController.getCorpEvents);
+router.get('/corp/:userID/events', EventManagementController.getCorpEvents);
 router.get('/corp/:corpID/history', EventManagementController.getPastEventsForCorporation);
 export { router as EventManagementRouter };
